# precision-biomarker-agent

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
Docs/ChatGPT/: Precision_Biomarker_Agent_Clinically_Realistic_Variable_Dictionary.docx  Precision_Biomarker_Agent_Mock_Report_Function_Style.docx
Docs/Claude Code/: HCLS_Precision_Biomarker_Agent_White_Paper_VAST_NVIDIA_v1.docx  HCLS_Precision_Biomarker_Report_HG002.docx  Precision_Biomarker_Agent_15_Minute_Deep_Dive_Plan.docx  Precision_Biomarker_Agent_5_Minute_Executive_Plan.docx  Precision_Biomarker_Agent_Architecture.mdd  Precision_Biomarker_Agent_Capabilities_Report.docx  Precision_Biomarker_Agent_Capabilities_Report.md  Precision_Biomarker_Agent_Executive_Bullets.docx
api/: __init__.py  main.py
api/routes/: __init__.py  analysis.py  (+2 more)
app/: biomarker_ui.py  patient_360.py  protein_viewer.py
config/: settings.py
docs/: ARCHITECTURE_GUIDE.docx  ARCHITECTURE_GUIDE.md  DEMO_GUIDE.docx  DEMO_GUIDE.md  DEPLOYMENT_GUIDE.docx  DEPLOYMENT_GUIDE.md  DESIGN.md  INDEX.md  LEARNING_GUIDE_ADVANCED.docx  LEARNING_GUIDE_ADVANCED.md  LEARNING_GUIDE_FOUNDATIONS.docx  LEARNING_GUIDE_FOUNDATIONS.md  PROJECT_BIBLE.docx  PROJECT_BIBLE.md  WHITE_PAPER.docx  WHITE_PAPER.md
scripts/: demo_validation.py  expand_biomarker_reference.py  expand_variants_and_interactions.py  gen_critical_values.py  gen_lab_ranges_and_aj.py  gen_patient_data.py  seed_all.py  setup_collections.py  validate_e2e.py
src/: __init__.py  agent.py  audit.py  biological_age.py  collections.py  critical_values.py  cross_modal.py  discordance_detector.py  disease_trajectory.py  export.py  genotype_adjustment.py  knowledge.py  lab_range_interpreter.py  models.py  pharmacogenomics.py  rag_engine.py  report_generator.py  translation.py
tests/: __init__.py  conftest.py  test_agent.py  test_api.py  test_biological_age.py  test_collections.py  test_critical_values.py  test_discordance_detector.py  test_disease_trajectory.py  test_edge_cases.py  test_export.py  test_genotype_adjustment.py  test_integration.py  test_lab_range_interpreter.py  test_longitudinal.py  test_models.py  test_pharmacogenomics.py  test_rag_engine.py  test_report_generator.py  test_ui.py
(+28 files in other folders)
