[project]
name = "precision-biomarker-agent"
version = "1.0.0"
description = "Precision Biomarker Intelligence Agent for HCLS AI Factory"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
# Coverage: run with `python3 -m pytest --cov=src --cov=api --cov-report=term-missing`
# when pytest-cov is installed. fail_under configured in [tool.coverage.report].
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: requires external services (Milvus, Claude API)",
    "security: security and fuzzing tests",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src", "api", "app"]

[tool.coverage.run]
source = ["src", "api", "app"]
omit = ["tests/*", "*/conftest.py"]

[tool.coverage.report]
show_missing = true
fail_under = 85
